# TIS

./: README.md
tis-tester/: .gitignore  MACOS_SETUP.md  README.md  SERIAL_SETUP.md  SETUP_GUIDE.md  flake.nix  pyproject.toml  shell.nix  tis_config.yaml
tis-tester/laptop-tools/: install-macos.command  send-to-pamir.ps1  tis-test-macos.command
tis-tester/tests/: test_core.py
tis-tester/tis_tester/: __init__.py  aic_ioctl.py  cli.py  config.py  rates.py  recovery.py  report.py  serial_console.py  session.py  tui.py  webui.py
tis-tester/tis_tester/backends/: __init__.py  base.py  bt_aic_uart.py  bt_hci.py  mock.py  wifi_aic.py
